--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.class
 *.dll
 *.exe
+*.war
+*.jar
 
 #Eclipse Settings File#
 ######################
@@ -16,3 +18,5 @@
 *.project
 *.log*
 *.DS_Store
+
+
