Added session management code

--- a/ef-member-service/pom.xml
+++ b/ef-member-service/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>ef-service</artifactId>
     <version>1.0.0-BUILD-SNAPSHOT</version>
   </parent>
-  <artifactId>member-service</artifactId>
+  <artifactId>ef-member-service</artifactId>
   <packaging>war</packaging>
   <name>ef-member-service</name>
   <description>Service for user registration</description>
@@ -33,6 +33,21 @@
 		<dependency>
 		    <groupId>ef.service</groupId>
 		    <artifactId>ef-data-access</artifactId>
+		    <version>1.0.0-BUILD-SNAPSHOT</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>2.3.1.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>3.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>ef.service</groupId>
+		    <artifactId>ef-common</artifactId>
 		    <version>1.0.0-BUILD-SNAPSHOT</version>
 		</dependency>					
 	</dependencies>
