--- a/ef-event-service/pom.xml
+++ b/ef-event-service/pom.xml
@@ -17,26 +17,41 @@
 	</properties>
 	<dependencies>
 
-	<dependency>
-	    <groupId>redis.clients</groupId>
-	    <artifactId>jedis</artifactId>
-	    <version>3.4.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>ef.service</groupId>
-	    <artifactId>ef-common</artifactId>
-	    <version>1.0.0-BUILD-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-	    <groupId>ef.service</groupId>
-	    <artifactId>ef-model</artifactId>
-	    <version>1.0.0-BUILD-SNAPSHOT</version>
-	</dependency>	
-	<dependency>
-	    <groupId>ef.service</groupId>
-	    <artifactId>ef-data-access</artifactId>
-	    <version>1.0.0-BUILD-SNAPSHOT</version>
-	</dependency>				
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>3.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>ef.service</groupId>
+		    <artifactId>ef-common</artifactId>
+		    <version>1.0.0-BUILD-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		    <groupId>ef.service</groupId>
+		    <artifactId>ef-model</artifactId>
+		    <version>1.0.0-BUILD-SNAPSHOT</version>
+		</dependency>	
+		<dependency>
+		    <groupId>ef.service</groupId>
+		    <artifactId>ef-data-access</artifactId>
+		    <version>1.0.0-BUILD-SNAPSHOT</version>
+		</dependency>	
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>2.3.1.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>3.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>ef.service</groupId>
+		    <artifactId>ef-common</artifactId>
+		    <version>1.0.0-BUILD-SNAPSHOT</version>
+		</dependency>				
 	</dependencies>
 
 	<build>
