--- a/ef-data-access/pom.xml
+++ b/ef-data-access/pom.xml
@@ -47,4 +47,20 @@
 	    <version>3.1.4</version>
 	</dependency>	    	
   </dependencies>
+    <build>
+  	 <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
