--- a/ef-data-access/pom.xml
+++ b/ef-data-access/pom.xml
@@ -13,6 +13,8 @@
 	<ef-version>1.0.0-BUILD-SNAPSHOT</ef-version>
 	<org.hsqldb-version>2.3.1</org.hsqldb-version>
 	<org.springframework-version>5.1.12.RELEASE</org.springframework-version>
+	<maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
   </properties> 
   <dependencies>
 	<dependency>
@@ -49,6 +51,13 @@
   </dependencies>
     <build>
   	 <plugins>
+  	  <plugin>    
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
