--- a/ef-event-service/pom.xml
+++ b/ef-event-service/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>ef.service</groupId>
-    <artifactId>ef-services</artifactId>
+    <artifactId>ef-service</artifactId>
     <version>1.0.0-BUILD-SNAPSHOT</version>
   </parent>
   <artifactId>ef-event-service</artifactId>
@@ -17,11 +17,6 @@
 	</properties>
 	<dependencies>
 
-		<dependency>
-		    <groupId>redis.clients</groupId>
-		    <artifactId>jedis</artifactId>
-		    <version>3.4.0</version>
-		</dependency>
 		<dependency>
 		    <groupId>ef.service</groupId>
 		    <artifactId>ef-common</artifactId>
@@ -38,20 +33,28 @@
 		    <version>1.0.0-BUILD-SNAPSHOT</version>
 		</dependency>	
 		<dependency>
+		    <groupId>ef.service</groupId>
+		    <artifactId>ef-messaging</artifactId>
+		    <version>1.0.0-BUILD-SNAPSHOT</version>
+		</dependency>	
+		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
 			<version>2.3.1.RELEASE</version>
-		</dependency>
-		<dependency>
-		    <groupId>redis.clients</groupId>
-		    <artifactId>jedis</artifactId>
-		    <version>3.4.0</version>
 		</dependency>
 		<dependency>
 		    <groupId>ef.service</groupId>
 		    <artifactId>ef-common</artifactId>
 		    <version>1.0.0-BUILD-SNAPSHOT</version>
 		</dependency>				
+		<dependency>
+	      <groupId>ef.service</groupId>
+	      <artifactId>ef-data-access</artifactId>
+	      <classifier>tests</classifier>
+	      <type>test-jar</type>
+	      <version>1.0.0-BUILD-SNAPSHOT</version>
+	      <scope>test</scope>
+        </dependency>			
 	</dependencies>
 
 	<build>
