--- a/ef-common/pom.xml
+++ b/ef-common/pom.xml
@@ -8,7 +8,11 @@
   <artifactId>ef-common</artifactId>
   <name>ef-common</name>
   <description>Common Code for EF Services</description>
-  
+  	<properties>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	    <maven.compiler.source>1.8</maven.compiler.source>		
+		<java-version>1.8</java-version>
+	</properties>
     <build>
     <plugins>
       <plugin>
@@ -23,6 +27,15 @@
           </execution>
         </executions>
       </plugin>
-    </plugins>
+
+      <plugin>    
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+       </plugin>	
+	</plugins>
+
   </build>
 </project>
